- fixed import error on main.jsx for AddNewInventoryPage - removed bottom property for back arrow svg in outlet nav causing misalignment

--- a/src/components/InventoryForm/InventoryForm.scss
+++ b/src/components/InventoryForm/InventoryForm.scss
@@ -174,7 +174,7 @@
     .back-link svg{
         width: 2.2rem;
         position: relative;
-        bottom: 1rem;
+        // bottom: 1rem;
         display: flex;
         align-items: center;
         @include tablet{
